Renaming + header changes
datova sada -> databaze
pocty v hlavicce

--- a/Web.Statu/404.html
+++ b/Web.Statu/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 <head>
     <meta charset="utf-8" />
@@ -114,7 +114,7 @@
                     <a href="/VerejneZakazky">Veřejných zakázek</a>
                     <a href="/StatniWeby">Webů</a>
                 </li>
-                <li class="level2"><a href="/data">Datové sady</a></li>
+                <li class="level2"><a href="/data">Databáze</a></li>
                 <li class="level2"><a href="/reporty">Analýzy a reporty</a></li>
                 <li class="level2"><a href="/texty">Komentáře</a></li>
                 <li class="level2"><a href="https://platforma.hlidacstatu.cz">Fórum</a></li>
@@ -128,7 +128,7 @@
     <div class="header__content header__content--compact">
         <div class="navbar__level2">
             <ul>
-                <li class=""><a href="/data">Datové sady</a></li>
+                <li class=""><a href="/data">Databáze</a></li>
                 <li class=""><a href="/reporty">Analýzy a reporty</a></li>
                 <li class=""><a href="/texty">Komentáře</a></li>
                 <li class=""><a href="https://platforma.hlidacstatu.cz">Fórum</a></li>
