--- a/Web.Statu/404.html
+++ b/Web.Statu/404.html
@@ -114,7 +114,7 @@
                     <a href="/VerejneZakazky">Veřejných zakázek</a>
                     <a href="/StatniWeby">Webů</a>
                 </li>
-                <li class="level2"><a href="/data">Databáze</a></li>
+                <li class="level2"><a href="/data">Další databáze</a></li>
                 <li class="level2"><a href="/reporty">Analýzy a reporty</a></li>
                 <li class="level2"><a href="/texty">Komentáře</a></li>
                 <li class="level2"><a href="https://platforma.hlidacstatu.cz">Fórum</a></li>
@@ -128,7 +128,7 @@
     <div class="header__content header__content--compact">
         <div class="navbar__level2">
             <ul>
-                <li class=""><a href="/data">Databáze</a></li>
+                <li class=""><a href="/data">Další databáze</a></li>
                 <li class=""><a href="/reporty">Analýzy a reporty</a></li>
                 <li class=""><a href="/texty">Komentáře</a></li>
                 <li class=""><a href="https://platforma.hlidacstatu.cz">Fórum</a></li>
