--- a/Web.Statu/500.html
+++ b/Web.Statu/500.html
@@ -111,6 +111,7 @@
                 <a href="/smlouvy">Smluv</a>
                 <a href="/osoby">Osob</a>
                 <a href="/VerejneZakazky">Veřejných zakázek</a>
+                <a href="/dotace">Dotací</a>
                 <a href="/StatniWeby">Webů</a>
             </li>
             <li class="level2"><a href="/data">Další databáze</a></li>
