--- a/Web.Statu/500.html
+++ b/Web.Statu/500.html
@@ -116,7 +116,7 @@
             </li>
             <li class="level2"><a href="/data">Další databáze</a></li>
             <li class="level2"><a href="/reporty">Analýzy a reporty</a></li>
-            <li class="level2"><a href="/texty">Komentáře</a></li>
+            <li class="level2"><a href="/texty">Zjistili jsme</a></li>
             <li class="level2"><a href="https://platforma.hlidacstatu.cz">Fórum</a></li>
             <li class="level2">
                 <a href="https://www.darujme.cz/projekt/1200384">Podpořte nás</a>
@@ -130,7 +130,7 @@
         <ul>
             <li class=""><a href="/data">Další databáze</a></li>
             <li class=""><a href="/reporty">Analýzy a reporty</a></li>
-            <li class=""><a href="/texty">Komentáře</a></li>
+            <li class=""><a href="/texty">Zjistili jsme</a></li>
             <li class=""><a href="https://platforma.hlidacstatu.cz">Fórum</a></li>
         </ul>
         <ul>
