--- a/Web.Statu/500.html
+++ b/Web.Statu/500.html
@@ -150,11 +150,12 @@
         <form id="new-search-input" class="new-search-input" action="/hledat" method="get">
             <div class="select2-wrapper">
                 <div class="input-group input-group-lg">
-                    <select class="form-control input-lg select2-multiple" id="autocomsearch" name="q" multiple="multiple">
+                    <select class="form-control input-lg select2-multiple" id="autocomsearch" multiple="multiple">
                     </select>
                     <span class="input-group-btn">
                         <button class="btn btn-primary" data-select2-open="autocomsearch" style="left:-7px"> hledat</button>
                     </span>
+                    <input id="search-result-query-data" name="q" type="hidden" />
                 </div>
             </div>
         </form>
